Unless otherwise indicated, all changes made by Jelmer Vernooij.

Ctrlproxy 3.0.8 UNRELEASED

  FEATURES

    * Only warn about inconsistency in server channel modes at start-up, 
	  rather than every time a mode is being used.

  BUG FIXES
   
    * Support 901 response codes.

	* Don't write to nickserv file either if autosave=false.


Ctrlproxy 3.0.7 2008-06-14

  FEATURES

    * Add 'create-implicit' option.

  BUG FIXES

    * Handle client-specific admin commands being run without a client 
      more gracefully.

    * Be less verbose about unredirectable responses.

    * Avoid usage of blocking /dev/random for SSL code. (Andreas Schneider)

    * Move time in ctcp requests. (#197)

    * Support storing ban exception lists, realname ban lists and 
      join throttling (MODE +e, MODE +d and MODE +J) as supported by hyperion.

    * Fix handling of channel and user modes. (#196)

    * Avoid disconnecting clients that are still waiting for a connection. 
      (#198, David Ford)

    * Fix parsing of ``learn-nickserv'' setting.

    * Support listening on IPv6.

	* Handle 326 and 328 WHOIS replies.

  INTERNALS

    * Import non-blocking GIOChannel improvements from libsoap into 
      the SSL wrapper code. (Andreas Schneider)


Ctrlproxy 3.0.6 2008-04-13

  IMPROVEMENTS

    * Add report-time-offset setting.
    
    * New settings ``port'', ``linestack'', ``logging'', ``password'',
      ``default-network'', ``auto-away-message'', ``auto-away-nick'', 
      ``auto-away-enable'' and ``auto-away-time''.

    * Simplify files in networks/ further by storing keys in ~/.ctrlproxy/keys 
      and having a list of channels to autojoin. (#76)

    * Only update autojoin settings when ctrlproxy is completely logged in. 
      (#113)

    * Increase the debug level at which messages about joins/parts are 
      logged.

    * Put linestack state data in separate files. This will make it possible 
      in the future to remove some of the state files.
